--- a/home-app-frontend/src/App.css
+++ b/home-app-frontend/src/App.css
@@ -1,14 +1,13 @@
 .app {
     display: flex;
     flex-direction: column;
-    width: 70%;
-    height: 1000px;
+    align-items: center;
+    width: 80%;
+    height: 1400px;
     margin: 0 auto;
     margin-top: -10px;
-    border-left: 1px solid rgb(120, 120, 120);
-    border-right: 1px solid rgb(120, 120, 120);
-    background-color: rgb(240,240, 240);
-    padding: 0px 20px;
+    
+    padding: 0px 20px 50px 20px;
 }
 
 .app ul {
@@ -21,4 +20,14 @@
     padding: 5px 10px;
     border: 1px solid rgb(200, 200, 200);
     margin: 0;
+}
+
+.app-headline {
+  color: white;
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.content-container {
+  width: 100%;
 }
