--- a/home-app-frontend/src/components/PlotCard/plotCard.css
+++ b/home-app-frontend/src/components/PlotCard/plotCard.css
@@ -1,6 +1,9 @@
 .plot-card {
   border: 2px solid black;
-  width: 1050px;
-  height: 500px;
-  padding: 30px;
+  width: 1250px;
+  height: 550px;
+  padding: 30px 0px 30px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
